# nfe-web-app

./: .gitignore  .pylintrc  Dockerfile  README.md  create_db.sql  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  uwsgi.ini
.github/: dependabot.yml
nfeweb/api/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
nfeweb/api/management/commands/: create_database.py  create_db_view.py
nfeweb/api/migrations/: 0001_initial.py  0002_productcategory_productdbmodel_category.py  0003_alter_productdbmodel_category.py  0004_alter_productdbmodel_category.py  0005_alter_nfedbmodel_payment_type.py  0006_alter_nfeissuerdbmodel_options_and_more.py  0007_alter_nfedbmodel_options.py  0008_alter_nfedbmodel_consumer_alter_nfedbmodel_issuer_and_more.py  0009_alter_nfedbmodel_payment_type.py  0010_productcategory_parent_alter_productdbmodel_category_and_more.py  0011_alter_producttype_options_alter_producttype_table.py  0012_alter_producttype_name.py  0013_alter_productdbmodel_options_and_more.py  0014_productdbmodel_description_alter_productdbmodel_name.py  0015_remove_productdbmodel_category.py  0016_state_registration_code_is_nullable.py
nfeweb/config/: asgi.py  settings.py  urls.py  wsgi.py
nfeweb/nfe_reader/: __main__.py  models.py  nfe.py  parser.py  report.py  sqlite.py
nfeweb/templates/: nfe-old.html  nfe.html  uncategorized_products.html
nfeweb/templates/rest_framework/: base.html
nfeweb/templates/rest_framework/horizontal/: select.html
nfeweb/templates/rest_framework/vertical/: select.html
nginx/misc/: index.html
ui/: index.html
